[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/GameMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/StyleboxFocus.tres" type="StyleBox" id=2]
[ext_resource path="res://scenes/InfoFont.tres" type="DynamicFont" id=3]

[node name="GameMenu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -952.939
margin_top = -552.153
margin_right = 7.06104
margin_bottom = -12.1526
script = ExtResource( 1 )

[node name="MenuBg" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -353.962
margin_top = -280.038
margin_right = 366.038
margin_bottom = 231.962
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.313726 )

[node name="ResumeButton" type="Button" parent="MenuBg"]
anchor_right = 1.0
margin_left = 48.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = 160.0
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Resume"

[node name="ExitButton" type="Button" parent="MenuBg"]
anchor_right = 1.0
margin_left = 48.0
margin_top = 192.0
margin_right = -32.0
margin_bottom = 320.0
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Exit"

[node name="CreditsButton" type="Button" parent="MenuBg"]
anchor_right = 1.0
margin_left = 48.0
margin_top = 352.0
margin_right = -32.0
margin_bottom = 480.0
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Credits"
[connection signal="visibility_changed" from="." to="." method="_on_GameMenu_visibility_changed"]
